changes in code with few added

--- a/code3/index.html
+++ b/code3/index.html
@@ -8,6 +8,7 @@
  table{
     background-color:greenyellow;
     border: 1px solid brown;
+    width: 50%;
  }
  th , td{
     border: 1px solid black;
