--- a/code4/index.html
+++ b/code4/index.html
@@ -11,8 +11,8 @@
     <input type="text"><br><br>
 
     <label>Gender:</label>
-    <input type="radio" name="gender"> Male
-    <input type="radio" name="gender"> Female<br><br>
+    <input type="radio"> Male
+    <input type="radio"> Female<br><br>
 
     <label>Hobbies:</label>
     <input type="checkbox"> Reading
