--- a/js-1/index.html
+++ b/js-1/index.html
@@ -17,14 +17,14 @@
         Email: <input type="email" placeholder="Email" id="email">
         <br><br>
         Select Course:
-        <select aria-placeholder="Select">
+        <select>
             <option>DSA</option>
             <option>CN</option>
             <option>IOT</option>
         </select>
         <br><br>
         Message: <textarea></textarea><br><br>
-        <input type="submit" value="Submit">
+        <input type="submit" value="Register">
     </form>
 </body>
 </html> 
